--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -7,7 +7,8 @@
 
     "mounts": [
       "source=/home/hugues/Experiments/2-MyhalSim/Simulation,target=/home/hugues/Myhal_Simulation,type=bind,consistency=cached"
-          ]
+          ],
 
+    "extensions": ["ms-vscode.cpptools", "twxs.cmake","ms-vscode.cmake-tools", "ms-python.python", "ms-iot.vscode-ros", "redhat.vscode-xml", "dotjoshjohnson.xml"],
 
 }
