--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,12 @@
 {
     "image": "docker_ros_melodic_hugues",
 
-    "workspaceMount": "source=/home/hugues/Experiments/2-MyhalSim/MyhalSimulator,target=/home/hugues/catkin_ws,type=bind,consistency=cached",
-    
-    "workspaceFolder": "/home/hugues/catkin_ws",
+    "workspaceFolder": "/home/${localEnv:USER}/catkin_ws",
 
+    "workspaceMount": "source=${localWorkspaceFolder},target=/home/${localEnv:USER}/catkin_ws,type=bind,consistency=cached",
+    
     "mounts": [
-      "source=/home/hugues/Experiments/2-MyhalSim/Simulation,target=/home/hugues/Myhal_Simulation,type=bind,consistency=cached"
+      "source=${localWorkspaceFolder}/../Simulation,target=/home/${localEnv:USER}/Myhal_Simulation,type=bind,consistency=cached"
           ],
 
     "extensions": ["ms-vscode.cpptools", "twxs.cmake","ms-vscode.cmake-tools", "ms-python.python", "ms-iot.vscode-ros", "redhat.vscode-xml", "dotjoshjohnson.xml"],
