--- a/src/myhal_simulator/params/custom_params_mgsa/custom_simulation_params.yaml
+++ b/src/myhal_simulator/params/custom_params_mgsa/custom_simulation_params.yaml
@@ -29,30 +29,30 @@ custom_scenario_params_list:
 
 
 custom_actor_spawn:
-  use_custom_spawn_room: ""
+  use_custom_spawn_room: "study_space_546"
 
 custom_actor_spawn_coordinates: 
   num_actors: 10
-  spawn_x_0: -3 # Specify spawn for each actor. First one: spawn_x_0, spawn_y_0. Second one: spawn_x_1, spawn_y_1 ...
-  spawn_y_0: -3
-  spawn_x_1: -3
-  spawn_y_1: -2
-  spawn_x_2: -3
-  spawn_y_2: -1
-  spawn_x_3: -3
-  spawn_y_3: 0
+  spawn_x_0: 19.5 # Specify spawn for each actor. First one: spawn_x_0, spawn_y_0. Second one: spawn_x_1, spawn_y_1 ...
+  spawn_y_0: 7.5
+  spawn_x_1: 18.5
+  spawn_y_1: 7.5
+  spawn_x_2: 17.5
+  spawn_y_2: 7.5
+  spawn_x_3: 19
+  spawn_y_3: 6.5
+  spawn_x_4: 18
+  spawn_y_4: 6.5
+  spawn_x_5: 17
+  spawn_y_5: 6.5
+  spawn_x_6: -17
+  spawn_y_6: 6
 
 custom_robot_goal: # robot spawn is parametrized in p2.launch
-  use_custom_goal_bool: 1 # boolean: 0 false, 1 true 
+  use_custom_goal_bool: 0 # boolean: 0 false, 1 true 
   goal_x: 5
   goal_y: 0
 
 custom_actor_goal: # for custom_wanderer actor type. The custom goal act as an offset from the spawning coordinates. Actor spawned in spawn_x=2 with goal_x=7 will try to go to x=9 in the sim. 
-  goal_x_0: 3
-  goal_y_0: 0
-  goal_x_1: -3
-  goal_y_1: 0
-  goal_x_2: 3
-  goal_y_2: 0
-  goal_x_3: -3
-  goal_y_3: 0
+  goal_x_0: -17
+  goal_y_0: 6
