--- a/src/myhal_simulator/params/custom_params_mgsa/room_params_V2.yaml
+++ b/src/myhal_simulator/params/custom_params_mgsa/room_params_V2.yaml
@@ -30,73 +30,74 @@ room_names:
 # empty_film
 # test_SF
 # test_custom_wanderer
+# path_follower_low_density
 
 # specify the geometry, position of tables, whether or not the room is enclosed, and the room scenario here  
 # note: the gXXX and pXXX refer to variables below
 lounge_532:
   geometry: g532
   positions: p532
-  enclosed: "0"
+  enclosed: "1"
   scenario: empty
 
 study_space_546:
   geometry: g546
   positions: p546
-  enclosed: "0"
-  scenario: test_custom_wanderer
+  enclosed: "1"
+  scenario: empty
 
 irm_lab_580:
   geometry: g580
   positions: p580
   enclosed: "1"
-  scenario: empty
+  scenario: path_follower_low_density
 
 admin_off_514:
   geometry: g514
   positions: p514
-  enclosed: "0"
-  scenario: empty
+  enclosed: "1"
+  scenario: path_follower_low_density
 
 pace_533:
   geometry: g533
   positions: p533
-  enclosed: "0"
-  scenario: empty
+  enclosed: "1"
+  scenario: path_follower_low_density
 
 study_space_545:
   geometry: g545
   positions: p545
-  enclosed: "0"
-  scenario: empty
+  enclosed: "1"
+  scenario: path_follower_low_density
 
 proj_rm_564:
   geometry: g564
   positions: p564
-  enclosed: "0"
+  enclosed: "1"
   scenario: empty
 
 inter_teaching_lab_570:
   geometry: g570
   positions: p570
-  enclosed: "0"
+  enclosed: "1"
   scenario: empty
 
 proj_rm_552:
   geometry: g552
   positions: p552
-  enclosed: "0"
+  enclosed: "1"
   scenario: empty
 
 proj_rm_556:
   geometry: g556
   positions: p556
-  enclosed: "0"
+  enclosed: "1"
   scenario: empty
 
 hallway1:
   geometry: g1
   positions: p1
-  enclosed: "0"
+  enclosed: "1"
   scenario: empty
 
 # Specify the contents of each geometry and position here 
