--- a/src/myhal_simulator/params/custom_params_mgsa/room_params_V2.yaml
+++ b/src/myhal_simulator/params/custom_params_mgsa/room_params_V2.yaml
@@ -50,25 +50,25 @@ irm_lab_580:
   geometry: g580
   positions: p580
   enclosed: "1"
-  scenario: path_follower_low_density
+  scenario: empty
 
 admin_off_514:
   geometry: g514
   positions: p514
   enclosed: "1"
-  scenario: path_follower_low_density
+  scenario: empty
 
 pace_533:
   geometry: g533
   positions: p533
   enclosed: "1"
-  scenario: path_follower_low_density
+  scenario: empty
 
 study_space_545:
   geometry: g545
   positions: p545
   enclosed: "1"
-  scenario: path_follower_low_density
+  scenario: empty
 
 proj_rm_564:
   geometry: g564
