--- a/src/myhal_simulator/params/custom_params_mgsa/model_params.yaml
+++ b/src/myhal_simulator/params/custom_params_mgsa/model_params.yaml
@@ -101,6 +101,7 @@ actor_names:
   - actor_extendedSF
   - actor_custom_wanderer
   - actor_path_follower
+  - actor_flow_follower
   
 actor_basic_wanderer: 
   filename: model://actor/meshes/SKIN_man_blue_shirt.dae
@@ -145,6 +146,11 @@ actor_custom_wanderer:
 actor_path_follower: 
   filename: model://actor/meshes/SKIN_man_blue_shirt.dae
   plugin: path_follower
+  obstacle_margin: "0.3"
+
+actor_flow_follower: 
+  filename: model://actor/meshes/SKIN_man_blue_shirt.dae
+  plugin: flow_follower
   obstacle_margin: "0.3"
 
 # table group parameters 
