--- a/src/myhal_simulator/params/Sc1_flow_params/common_vehicle_params.yaml
+++ b/src/myhal_simulator/params/Sc1_flow_params/common_vehicle_params.yaml
@@ -1,9 +1,10 @@
 common_vehicle_params:
   mass: 0.1
-  max_force: 10
+  max_force: 5
   slowing_distance: 1
   arrival_distance: 1
   obstacle_margin: 0.2
+  actor_margin: 2.0
   blocking: 1
   start_mode: 0 #2 for random, 1 for walking, 0 for standing
   parse_digits: 1 # boolean: 0=false, 1=true. Set to true to parse digits objectives in map.txt.
