--- a/src/jackal_velodyne/CMakeLists.txt
+++ b/src/jackal_velodyne/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(jackal_velodyne)
 
-add_definitions(-std=c++11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS} -std=c++11 -O3")
+add_definitions(-std=c++17)
+add_compile_options(-std=c++17)
+add_compile_options(-std=gnu++17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS} -std=c++17 -O3")
+
+#add_definitions(-std=c++11)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS} -std=c++11 -O3")
 
 find_package(catkin REQUIRED COMPONENTS
   gazebo_ros
