--- a/src/myhal_simulator/CMakeLists.txt
+++ b/src/myhal_simulator/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(myhal_simulator)
 
-add_definitions(-std=c++14)
+add_definitions(-std=c++17)
+add_compile_options(-std=c++17)
+add_compile_options(-std=gnu++17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS} -std=c++17 -O3")
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
