--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,24 @@
 {
 
-    "python.autoComplete.extraPaths": [
-        "/opt/ros/melodic/lib/python2.7/dist-packages"
-    ],
     "python.pythonPath": "/usr/bin/python",
-    "python.linting.pylintEnabled": true,
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/melodic/lib",
+        "/opt/ros/melodic/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages/rospy",
+        "/opt/ros/melodic/lib/**",
+        "src/dashboard/src",
+        "src/dashboard/src/utilities"
+    ],
+
+    "python.formatting.provider": "autopep8",
+    "python.formatting.autopep8Args": [
+        "--ignore=E302,E265,E306",
+        "--max-line-length=200"
+    ],
+
     "python.linting.enabled": true,
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
 
     "files.watcherExclude": {
         "**/.git/objects/**": true,
