--- a/src/myhal_simulator/params/RandFlow_params/scenario_params_V2.yaml
+++ b/src/myhal_simulator/params/RandFlow_params/scenario_params_V2.yaml
@@ -1,16 +1,9 @@
 scenario_names:
-  - med_tables
   - empty
-  - flow_follower_low_density
+  - flow_follower_rand_density
  
 
 # TODO: Change table_percentagge by table_number for more clarity? Same for pop density?
-
-med_tables:
-  pop_density: "0"
-  table_percentage: "0.5"
-  actor: table_percentage
-  table_group_list: all_group
 
 empty:
   pop_density: "0"
@@ -18,10 +11,11 @@ empty:
   actor: actor_basic_wanderer
   table_group_list: mixed_group
   
-flow_follower_low_density:
-  pop_density: "0"
-  pop_num: "8"
-  table_percentage: "0"
+flow_follower_rand_density:
+  pop_rand_range: "0.06" # if specified and positive the pop density is random uniform in [pop_density - pop_rand_range, pop_density + pop_rand_range]
+  pop_density: "0.06"
+  table_rand_range: "0.45"
+  table_percentage: "0.5"
   actor: actor_flow_follower
   table_group_list: all_group
 
