--- a/src/myhal_simulator/params/RandWand_params/scenario_params_V2.yaml
+++ b/src/myhal_simulator/params/RandWand_params/scenario_params_V2.yaml
@@ -1,30 +1,26 @@
 scenario_names:
-  - med_tables
+  - Rand_wanderers_rand_tables
   - empty
-  - flow_follower_low_density
- 
+  
 
-# TODO: Change table_percentagge by table_number for more clarity? Same for pop density?
+# Scenario random:
 
-med_tables:
-  pop_density: "0"
+Rand_wanderers_rand_tables:
+  pop_rand_range: "0.08" # if specified and positive the pop density is random uniform in [pop_density - pop_rand_range, pop_density + pop_rand_range]
+  pop_density: "0.09"
+  table_rand_range: "0.45"
   table_percentage: "0.5"
-  actor: table_percentage
+  actor: actor_basic_wanderer
   table_group_list: all_group
-
+  
 empty:
   pop_density: "0"
   table_percentage: "0"
   actor: actor_basic_wanderer
-  table_group_list: mixed_group
-  
-flow_follower_low_density:
-  pop_density: "0"
-  pop_num: "8"
-  table_percentage: "0"
-  actor: actor_flow_follower
-  table_group_list: all_group
+  table_group_list: small_table_group
 
+
+# Table groups 
 
 big_table_group:
   - table_group_1
@@ -51,4 +47,3 @@ all_group:
   - table_group_5
   - table_group_6
   - table_group_8
-
