--- a/src/myhal_simulator/params/RandWand_params/room_params_V2.yaml
+++ b/src/myhal_simulator/params/RandWand_params/room_params_V2.yaml
@@ -48,25 +48,25 @@ irm_lab_580:
   geometry: g580
   positions: p580
   enclosed: "0"
-  scenario: empty
+  scenario: Rand_wanderers_rand_tables
 
 admin_off_514:
   geometry: g514
   positions: p514
   enclosed: "0"
-  scenario: empty
+  scenario: Rand_wanderers_rand_tables
 
 inter_teaching_lab_570:
   geometry: g570
   positions: p570
   enclosed: "0"
-  scenario: empty
+  scenario: Rand_wanderers_rand_tables
 
 study_space_545:
   geometry: g545
   positions: p545
   enclosed: "0"
-  scenario: empty
+  scenario: Rand_wanderers_rand_tables
 
 # Unused rooms
 
