--- a/src/jackal_velodyne/params/teb_local_planner_params.yaml
+++ b/src/jackal_velodyne/params/teb_local_planner_params.yaml
@@ -1,6 +1,7 @@
-TebLocalPlannerROS:
+TrajectoryPlannerROS:
 
  odom_topic: odom
+ map_frame: /odom
     
  # Trajectory
   
@@ -10,45 +11,33 @@ TebLocalPlannerROS:
  max_samples: 500
  global_plan_overwrite_orientation: True
  allow_init_with_backwards_motion: False
- max_global_plan_lookahead_dist: 0
- global_plan_viapoint_sep: -1
- global_plan_prune_distance: 1
- exact_arc_length: False
+ max_global_plan_lookahead_dist: 8.0
  feasibility_check_no_poses: 5
- publish_feedback: False
     
  # Robot
          
- max_vel_x: 2 #previous 0.4
- max_vel_x_backwards: 0.2
- max_vel_y: 0.0 
- max_vel_theta: 4.0 #previous 0.3
- acc_lim_x: 20 #previous 0.5 data from http://wiki.ros.org/diff_drive_controller
- acc_lim_theta: 25 #previous 0.4
- min_turning_radius: 0.0 # diff-drive robot (can turn on place!)
-
- footprint_model:
-   type: "circular"
-   radiue: 0.25
-
+ max_vel_x: 1.5               # Actual Jackal value in controller: 2.0 m/s
+ max_vel_x_backwards: 0.5
+ max_vel_theta: 2.0           # Actual Jackal value in controller: 4.0 rad/s
+ acc_lim_x: 4.0               # Actual Jackal value in controller: 20.0 m/s^2
+ acc_lim_theta:  5.0          # Actual Jackal value in controller: 25.0 rad/s^2
+ min_turning_radius: 0.0
+ footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+   type: "point"
+   radius: 0.25 # for type "circular"
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
- yaw_goal_tolerance: 0.1
- free_goal_vel: False
- complete_global_plan: True
+ xy_goal_tolerance: 3.0
+ yaw_goal_tolerance: 6.29
+ free_goal_vel: True
     
  # Obstacles
     
- min_obstacle_dist: 0.25 # This value must also include our robot radius, since footprint_model is set to "point".
+ min_obstacle_dist: 0.2
  inflation_dist: 0.6
  include_costmap_obstacles: False
- costmap_obstacles_behind_robot_dist: 1.5
- obstacle_poses_affected: 15
-
- dynamic_obstacle_inflation_dist: 0.6
- include_dynamic_obstacles: False
-
+ costmap_obstacles_behind_robot_dist: 0.2
+ obstacle_poses_affected: 20
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
@@ -60,133 +49,34 @@ TebLocalPlannerROS:
  optimization_activate: True
  optimization_verbose: False
  penalty_epsilon: 0.1
- obstacle_cost_exponent: 4
  weight_max_vel_x: 2
  weight_max_vel_theta: 1
  weight_acc_lim_x: 1
  weight_acc_lim_theta: 1
  weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 1
+ weight_kinematics_forward_drive: 100
  weight_kinematics_turning_radius: 1
- weight_optimaltime: 1 # must be > 0
- weight_shortest_path: 0
- weight_obstacle: 0
- weight_inflation: 0.2
- weight_dynamic_obstacle: 10
- weight_dynamic_obstacle_inflation: 0.2
- weight_viapoint: 1
- weight_adapt_factor: 2
- weight_predicted_costmap: 0.03
+ weight_optimaltime: 1
+ weight_obstacle: 0.00001
+ weight_dynamic_obstacle: 10 # not in use yet
+ alternative_time_cost: False # not in use yet
+ weight_predicted_costmap: 0.0025 # direct multiplier of the error function for predicted costmaps
 
- # Homotopy Class Planner
+  escape_vel: -0.5
+  holonomic_robot: false
 
  enable_homotopy_class_planning: True
  enable_multithreading: True
+ simple_exploration: False
  max_number_classes: 4
- selection_cost_hysteresis: 1.0
- selection_prefer_initial_plan: 0.9
- selection_obst_cost_scale: 100.0
- selection_alternative_time_cost: False
- 
  roadmap_graph_no_samples: 15
  roadmap_graph_area_width: 5
- roadmap_graph_area_length_scale: 1.0
  h_signature_prescaler: 0.5
  h_signature_threshold: 0.1
+ obstacle_keypoint_offset: 0.1
  obstacle_heading_threshold: 0.45
- switching_blocking_period: 0.0
- viapoints_all_candidates: True
- delete_detours_backwards: True
- max_ratio_detours_duration_best_duration: 3.0
- visualize_hc_graph: False
- visualize_with_time_as_z_axis_scale: False
+ visualize_hc_graph: True
 
-# Recovery
- 
- shrink_horizon_backup: True
- shrink_horizon_min_duration: 10
- oscillation_recovery: True
- oscillation_v_eps: 0.1
- oscillation_omega_eps: 0.1
- oscillation_recovery_min_duration: 10
- oscillation_filter_duration: 10
+ # Publishing
+ publish_feedback : False
 
-
-
-
-
-# TebLocalPlannerROS:
-
-#  odom_topic: odom
-#  map_frame: /odom
-    
-#  # Trajectory
-  
-#  teb_autosize: True
-#  dt_ref: 0.3
-#  dt_hysteresis: 0.1
-#  global_plan_overwrite_orientation: True
-#  max_global_plan_lookahead_dist: 3.0
-#  feasibility_check_no_poses: 5
-    
-#  # Robot
-         
-#  max_vel_x: 0.4
-#  max_vel_x_backwards: 0.2
-#  max_vel_theta: 0.3
-#  acc_lim_x: 0.5
-#  acc_lim_theta: 0.5
-#  min_turning_radius: 0.0
-#  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-#    type: "circular"
-#    radius: 0.25 # for type "circular"
-
-#  # GoalTolerance
-    
-#  xy_goal_tolerance: 0.2
-#  yaw_goal_tolerance: 0.1
-#  free_goal_vel: False
-    
-#  # Obstacles
-    
-#  min_obstacle_dist: 0.4
-#  include_costmap_obstacles: True
-#  costmap_obstacles_behind_robot_dist: 1.0
-#  obstacle_poses_affected: 30
-#  costmap_converter_plugin: ""
-#  costmap_converter_spin_thread: True
-#  costmap_converter_rate: 5
-
-#  # Optimization
-    
-#  no_inner_iterations: 5
-#  no_outer_iterations: 4
-#  optimization_activate: True
-#  optimization_verbose: False
-#  penalty_epsilon: 0.1
-#  weight_max_vel_x: 2
-#  weight_max_vel_theta: 1
-#  weight_acc_lim_x: 1
-#  weight_acc_lim_theta: 1
-#  weight_kinematics_nh: 1000
-#  weight_kinematics_forward_drive: 1
-#  weight_kinematics_turning_radius: 1
-#  weight_optimaltime: 1
-#  weight_obstacle: 50
-#  weight_dynamic_obstacle: 10 # not in use yet
-#  alternative_time_cost: False # not in use yet
-#  weight_predicted_costmap: 0.0001 # direct multiplier of the error function for predicted costmaps
-
-#  # Homotopy Class Planner
-
-#  enable_homotopy_class_planning: True
-#  enable_multithreading: True
-#  simple_exploration: False
-#  max_number_classes: 4
-#  roadmap_graph_no_samples: 15
-#  roadmap_graph_area_width: 5
-#  h_signature_prescaler: 0.5
-#  h_signature_threshold: 0.1
-#  obstacle_keypoint_offset: 0.1
-#  obstacle_heading_threshold: 0.45
-#  visualize_hc_graph: False
