--- a/src/jackal_velodyne/params/teb_local_planner_params_old.yaml
+++ b/src/jackal_velodyne/params/teb_local_planner_params_old.yaml
@@ -8,9 +8,11 @@ TebLocalPlannerROS:
  teb_autosize: True
  dt_ref: 0.3
  dt_hysteresis: 0.1
+ min_samples: 3
  global_plan_overwrite_orientation: True
  max_global_plan_lookahead_dist: 8.0
- feasibility_check_no_poses: 5
+ feasibility_check_no_poses: 4
+ exact_arc_length: False
     
  # Robot
          
@@ -21,8 +23,8 @@ TebLocalPlannerROS:
  acc_lim_theta:  6.0          # Actual Jackal value in controller: 25.0 rad/s^2
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "point"
-   radius: 0.25 # for type "circular"
+   type: "circular"
+   radius: 0.2 # for type "circular"
    line_start: [-0.3, 0.0] # for type "line"
    line_end: [0.3, 0.0] # for type "line"
    front_offset: 0.2 # for type "two_circles"
@@ -30,6 +32,14 @@ TebLocalPlannerROS:
    rear_offset: 0.2 # for type "two_circles"
    rear_radius: 0.2 # for type "two_circles"
    vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
+
+ # Legacy obstacle association strategy
+ legacy_obstacle_association : False
+
+ # Non-legacy obstacle association strategy
+ obstacle_association_force_inclusion_factor : 10.0   # association distance = min_obstacle_dist * this
+ obstacle_association_cutoff_factor: 20.0             # cut-off distance = min_obstacle_dist * this
+
 
  # GoalTolerance
     
@@ -39,33 +49,37 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 0.2
- include_costmap_obstacles: False
- costmap_obstacles_behind_robot_dist: 0.2
- obstacle_poses_affected: 20
+ min_obstacle_dist: 0.1
+ inflation_dist: 0.9
+ include_costmap_obstacles: True
+ costmap_obstacles_behind_robot_dist: 1.0
+ obstacle_poses_affected: 30
+
+ # Costmap converter
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
 
+
  # Optimization
     
- no_inner_iterations: 5
- no_outer_iterations: 4
  optimization_activate: True
  optimization_verbose: False
- penalty_epsilon: 0.1
+
+ no_inner_iterations: 5     # Default: 5
+ no_outer_iterations: 4     # Default: 4
+ penalty_epsilon: 0.03      # Default: 0.1
  weight_max_vel_x: 2
  weight_max_vel_theta: 1
  weight_acc_lim_x: 1
  weight_acc_lim_theta: 1
  weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 100
+ weight_kinematics_forward_drive: 10
  weight_kinematics_turning_radius: 1
  weight_optimaltime: 1
- weight_obstacle: 0.00001
+ weight_obstacle: 20.0 # Default: 50
  weight_dynamic_obstacle: 10 # not in use yet
- alternative_time_cost: False # not in use yet
- weight_predicted_costmap: 0.0025 # direct multiplier of the error function for predicted costmaps
+ weight_predicted_costmap: 0.0000000001 # Default: 0.0025 direct multiplier of the error function for predicted costmaps
 
  # Homotopy Class Planner
 
@@ -73,13 +87,15 @@ TebLocalPlannerROS:
  enable_multithreading: True
  simple_exploration: False
  max_number_classes: 4
+ selection_cost_hysteresis: 0.95
+
  roadmap_graph_no_samples: 15
- roadmap_graph_area_width: 5
- h_signature_prescaler: 0.5
+ roadmap_graph_area_width: 12
+ h_signature_prescaler: 0.9
  h_signature_threshold: 0.1
  obstacle_keypoint_offset: 0.1
- obstacle_heading_threshold: 0.45
- visualize_hc_graph: True
+ obstacle_heading_threshold: 1.0
+ visualize_hc_graph: False
 
  # Publishing
  publish_feedback : False
