--- a/src/jackal_velodyne/params/teb_local_planner_params_old.yaml
+++ b/src/jackal_velodyne/params/teb_local_planner_params_old.yaml
@@ -6,21 +6,23 @@ TebLocalPlannerROS:
  # Trajectory
   
  teb_autosize: True
- dt_ref: 0.3
- dt_hysteresis: 0.1
+ dt_ref: 0.2
+ dt_hysteresis: 0.05
  min_samples: 3
  global_plan_overwrite_orientation: True
  max_global_plan_lookahead_dist: 8.0
- feasibility_check_no_poses: 4
+ feasibility_check_no_poses: 5
  exact_arc_length: False
+
+ control_look_ahead_poses: 2 # Set this to at least two to get a better estimation of the /cmd_vel
     
  # Robot
          
  max_vel_x: 1.5               # Actual Jackal value in controller: 2.0 m/s
  max_vel_x_backwards: 0.5
  max_vel_theta: 2.0           # Actual Jackal value in controller: 4.0 rad/s
- acc_lim_x: 4.0               # Actual Jackal value in controller: 20.0 m/s^2
- acc_lim_theta:  6.0          # Actual Jackal value in controller: 25.0 rad/s^2
+ acc_lim_x: 5.0               # Actual Jackal value in controller: 20.0 m/s^2
+ acc_lim_theta:  8.0          # Actual Jackal value in controller: 25.0 rad/s^2
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
    type: "circular"
@@ -37,8 +39,8 @@ TebLocalPlannerROS:
  legacy_obstacle_association : False
 
  # Non-legacy obstacle association strategy
- obstacle_association_force_inclusion_factor : 10.0   # association distance = min_obstacle_dist * this
- obstacle_association_cutoff_factor: 20.0             # cut-off distance = min_obstacle_dist * this
+ obstacle_association_force_inclusion_factor : 5.0   # association distance = min_obstacle_dist * this
+ obstacle_association_cutoff_factor: 10.0             # cut-off distance = min_obstacle_dist * this
 
 
  # GoalTolerance
@@ -51,7 +53,7 @@ TebLocalPlannerROS:
     
  min_obstacle_dist: 0.1
  inflation_dist: 0.9
- include_costmap_obstacles: True
+ include_costmap_obstacles: False
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
 
@@ -66,32 +68,32 @@ TebLocalPlannerROS:
  optimization_activate: True
  optimization_verbose: False
 
- no_inner_iterations: 5     # Default: 5
- no_outer_iterations: 4     # Default: 4
- penalty_epsilon: 0.03      # Default: 0.1
+ no_inner_iterations: 10     # Default: 5
+ no_outer_iterations: 8     # Default: 4
+ penalty_epsilon: 0.05      # Default: 0.1
  weight_max_vel_x: 2
  weight_max_vel_theta: 1
  weight_acc_lim_x: 1
  weight_acc_lim_theta: 1
  weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 10
+ weight_kinematics_forward_drive: 2
  weight_kinematics_turning_radius: 1
  weight_optimaltime: 1
- weight_obstacle: 20.0 # Default: 50
+ weight_obstacle: 0.0001 # Default: 50
  weight_dynamic_obstacle: 10 # not in use yet
- weight_predicted_costmap: 0.0000000001 # Default: 0.0025 direct multiplier of the error function for predicted costmaps
+ weight_predicted_costmap: 0.0025 # Default: 0.0025 direct multiplier of the error function for predicted costmaps
 
  # Homotopy Class Planner
 
  enable_homotopy_class_planning: True
  enable_multithreading: True
  simple_exploration: False
- max_number_classes: 4
- selection_cost_hysteresis: 0.95
+ max_number_classes: 8
+ selection_cost_hysteresis: 1.0
 
- roadmap_graph_no_samples: 15
+ roadmap_graph_no_samples: 50
  roadmap_graph_area_width: 12
- h_signature_prescaler: 0.9
+ h_signature_prescaler: 0.8
  h_signature_threshold: 0.1
  obstacle_keypoint_offset: 0.1
  obstacle_heading_threshold: 1.0
