--- a/src/myhal_simulator/params/RandFlow_params/scenario_params_V2.yaml
+++ b/src/myhal_simulator/params/RandFlow_params/scenario_params_V2.yaml
@@ -12,10 +12,10 @@ empty:
   table_group_list: mixed_group
   
 flow_follower_rand_density:
-  pop_rand_range: "0.055" # if specified and positive the pop density is random uniform in [pop_density - pop_rand_range, pop_density + pop_rand_range]
-  pop_density: "0.06"
+  pop_rand_range: "0.005" # 0.055 if specified and positive the pop density is random uniform in [pop_density - pop_rand_range, pop_density + pop_rand_range]
+  pop_density: "0.07"     # 0.06
   table_rand_range: "0.45"
-  table_percentage: "0.5"
+  table_percentage: "0.4"
   actor: actor_flow_follower
   table_group_list: all_group
 
