--- a/src/jackal_velodyne/params/teb_local_planner_params_old.yaml
+++ b/src/jackal_velodyne/params/teb_local_planner_params_old.yaml
@@ -1,104 +1,82 @@
 TebLocalPlannerROS:
 
- odom_topic: odom
- map_frame: /odom
-    
- # Trajectory
-  
- teb_autosize: True
- dt_ref: 0.2
- dt_hysteresis: 0.05
- min_samples: 3
- global_plan_overwrite_orientation: True
- max_global_plan_lookahead_dist: 8.0
- feasibility_check_no_poses: 5
- exact_arc_length: False
+  odom_topic: odom
+  map_frame: /odom
 
- control_look_ahead_poses: 2 # Set this to at least two to get a better estimation of the /cmd_vel
-    
- # Robot
-         
- max_vel_x: 1.5               # Actual Jackal value in controller: 2.0 m/s
- max_vel_x_backwards: 0.5
- max_vel_theta: 2.0           # Actual Jackal value in controller: 4.0 rad/s
- acc_lim_x: 5.0               # Actual Jackal value in controller: 20.0 m/s^2
- acc_lim_theta:  8.0          # Actual Jackal value in controller: 25.0 rad/s^2
- min_turning_radius: 0.0
- footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "circular"
-   radius: 0.2 # for type "circular"
-   line_start: [-0.3, 0.0] # for type "line"
-   line_end: [0.3, 0.0] # for type "line"
-   front_offset: 0.2 # for type "two_circles"
-   front_radius: 0.2 # for type "two_circles"
-   rear_offset: 0.2 # for type "two_circles"
-   rear_radius: 0.2 # for type "two_circles"
-   vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
+  # Trajectory
 
- # Legacy obstacle association strategy
- legacy_obstacle_association : False
+  teb_autosize: True
+  dt_ref: 0.3
+  dt_hysteresis: 0.1
+  max_samples: 500
+  global_plan_overwrite_orientation: True
+  allow_init_with_backwards_motion: False
+  max_global_plan_lookahead_dist: 8.0
+  feasibility_check_no_poses: 5
 
- # Non-legacy obstacle association strategy
- obstacle_association_force_inclusion_factor : 5.0   # association distance = min_obstacle_dist * this
- obstacle_association_cutoff_factor: 10.0             # cut-off distance = min_obstacle_dist * this
+  # Robot
 
+  max_vel_x: 1.5               # Actual Jackal value in controller: 2.0 m/s
+  max_vel_x_backwards: 0.5
+  max_vel_theta: 2.0           # Actual Jackal value in controller: 4.0 rad/s
+  acc_lim_x: 4.0               # Actual Jackal value in controller: 20.0 m/s^2
+  acc_lim_theta:  5.0          # Actual Jackal value in controller: 25.0 rad/s^2
+  min_turning_radius: 0.0
+  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+    type: "point"
+    radius: 0.25 # for type "circular"
 
- # GoalTolerance
-    
- xy_goal_tolerance: 3.0
- yaw_goal_tolerance: 6.29
- free_goal_vel: True
-    
- # Obstacles
-    
- min_obstacle_dist: 0.1
- inflation_dist: 0.9
- include_costmap_obstacles: False
- costmap_obstacles_behind_robot_dist: 1.0
- obstacle_poses_affected: 30
+  # GoalTolerance
 
- # Costmap converter
- costmap_converter_plugin: ""
- costmap_converter_spin_thread: True
- costmap_converter_rate: 5
+  xy_goal_tolerance: 3.0
+  yaw_goal_tolerance: 6.29
+  free_goal_vel: True
 
+  # Obstacles
 
- # Optimization
-    
- optimization_activate: True
- optimization_verbose: False
+  min_obstacle_dist: 0.2
+  inflation_dist: 0.6
+  include_costmap_obstacles: False
+  costmap_obstacles_behind_robot_dist: 0.2
+  obstacle_poses_affected: 20
+  costmap_converter_plugin: ""
+  costmap_converter_spin_thread: True
+  costmap_converter_rate: 5
 
- no_inner_iterations: 10     # Default: 5
- no_outer_iterations: 8     # Default: 4
- penalty_epsilon: 0.05      # Default: 0.1
- weight_max_vel_x: 2
- weight_max_vel_theta: 1
- weight_acc_lim_x: 1
- weight_acc_lim_theta: 1
- weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 2
- weight_kinematics_turning_radius: 1
- weight_optimaltime: 1
- weight_obstacle: 0.0001 # Default: 50
- weight_dynamic_obstacle: 10 # not in use yet
- weight_predicted_costmap: 0.0025 # Default: 0.0025 direct multiplier of the error function for predicted costmaps
+  # Optimization
 
- # Homotopy Class Planner
+  no_inner_iterations: 5
+  no_outer_iterations: 4
+  optimization_activate: True
+  optimization_verbose: False
+  penalty_epsilon: 0.1
+  weight_max_vel_x: 2
+  weight_max_vel_theta: 1
+  weight_acc_lim_x: 1
+  weight_acc_lim_theta: 1
+  weight_kinematics_nh: 1000
+  weight_kinematics_forward_drive: 100
+  weight_kinematics_turning_radius: 1
+  weight_optimaltime: 1
+  weight_obstacle: 0.00001
+  weight_dynamic_obstacle: 10 # not in use yet
+  alternative_time_cost: False # not in use yet
+  weight_predicted_costmap: 0.0025 # direct multiplier of the error function for predicted costmaps
 
- enable_homotopy_class_planning: True
- enable_multithreading: True
- simple_exploration: False
- max_number_classes: 8
- selection_cost_hysteresis: 1.0
+  escape_vel: -0.5
+  holonomic_robot: false
 
- roadmap_graph_no_samples: 50
- roadmap_graph_area_width: 12
- h_signature_prescaler: 0.8
- h_signature_threshold: 0.1
- obstacle_keypoint_offset: 0.1
- obstacle_heading_threshold: 1.0
- visualize_hc_graph: False
+  enable_homotopy_class_planning: True
+  enable_multithreading: True
+  simple_exploration: False
+  max_number_classes: 4
+  roadmap_graph_no_samples: 15
+  roadmap_graph_area_width: 5
+  h_signature_prescaler: 0.5
+  h_signature_threshold: 0.1
+  obstacle_keypoint_offset: 0.1
+  obstacle_heading_threshold: 0.45
+  visualize_hc_graph: True
 
- # Publishing
- publish_feedback : False
-
+  # Publishing
+  publish_feedback : False
